skeleton completed, replete with skeleton-markup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 <body>
 
-    
+    <div class="container">
+        <header class="header">
+            Header
+        </header>
+        <section class="section-about">
+            About
+        </section>
+        <section class="section-projects">
+            Projects
+        </section>
+        <footer class="footer">
+            Footer
+        </footer>
+    </div>
 
 </body>
 </html>
