--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <div class="container">
         <header class="header">
-            Header
+            <div class="header__box">
+                <h1 class="main-heading">mySite</h1>
+            </div>
         </header>
         <section class="section-about">
             About
