--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
             <div class="header__box">
-                <h1 class="main-heading">mySite</h1>
+                <h1 class="header__box--heading main-heading">mySite</h1>
             </div>
         </header>
         <section class="section-about">
