--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
     <div class="container">
         <header class="header">
-            <div class="header__box">
-                <h1 class="header__box--heading main-heading">mySite</h1>
-            </div>
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/iso-republic-free-video-003.mp4">
+                        sorry! it appear your browser doesn't support this video
+                    </video>
+                </div>
+                <div class="header__box">
+                    <h1 class="header__box--heading main-heading">mySite</h1>
+                </div>
         </header>
         <section class="section-about">
             About
