header completed with animations and background video

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
                     </video>
                 </div>
                 <div class="header__box">
-                    <h1 class="header__box--heading main-heading">mySite</h1>
+                    <h1 class="header__box--heading main-heading">mySite
+                    </h1>
+                    <h2 class="header__box--subheading tert-heading">
+                        welcome! 
+                    </h2>
+                    <p class="header__box--copy copy-normal">please look around, and feel free to contact me.</p>
                 </div>
         </header>
         <section class="section-about">
