--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2 class="header__box--subheading sub-heading">
                         welcome to my site! 
                     </h2>
-                    <p class="header__box--copy copy-normal">please look around, and feel free to contact me.</p>
+                    <p class="header__box--copy copy-normal"> scroll. and feel free to contact me.</p>
                 </div>
         </header>
         <section class="section-about">
@@ -32,7 +32,7 @@
                     I began my development journey about a year ago, when I enrolled in a coding Bootcamp. Having zero experience with programming and web development before I started, the 6 months I spent at camp were difficult, but they awakened a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress.
                 </p>
                 <p class="about__box--copy">
-                   I respect the power of web development; mobile development in particular. The affordability of technology has generated the egalitarian phenomenon of 3 billion smartphone owners worldwide. I believe information-sharing should sustain its continuous renaissance via mobile development, creating a better informed and increasingly empathetic global population. I couldn't imagine a better place to be.       
+                   I respect the power of web development; mobile development in particular. The affordability of technology has generated the egalitarian phenomenon of 3 billion smartphone owners worldwide. I believe information-sharing will sustain its continuous renaissance via mobile development, creating a better informed and increasingly empathetic global population. I couldn't imagine a better place to be.       
                 </p>
             </div>
         </section>
