Layout changed with Projects first after header, video with autoplay in the tag added to html element for ios safari, maybe.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 
     <div class="container">
+
         <header class="header">
                 <div class="bg-video">
-                    <video class="bg-video__content" autoplay muted loop>
+                    <video autoplay class="bg-video__content" autoplay muted loop>
                         <source src="img/iso-republic-free-video-003.mp4">
                         sorry! it appear your browser doesn't support this video
-                    </video>
+                    </video autoplay>
                 </div>
                 <div class="header__box">
                     <!-- <h1 class="header__box--heading main-heading">mySite
@@ -26,6 +27,11 @@
                     <p class="header__box--copy copy-normal"> scroll. and feel free to contact me.</p>
                 </div>
         </header>
+
+        <section class="section-projects">
+            Projects
+        </section>
+
         <section class="section-about">
             <div class="about__box">
                 <p class="about__box--copy">
@@ -36,12 +42,11 @@
                 </p>
             </div>
         </section>
-        <section class="section-projects">
-            Projects
-        </section>
+
         <footer class="footer">
             Footer
         </footer>
+
     </div>
 
 </body>
