footer about done, fonts and animations from header changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400;1,700&family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Freckle+Face&family=Lacquer&family=Nosifer&family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>sanjeev chadeesingh</title>
 </head>
@@ -13,7 +13,7 @@
 
         <header class="header">
                 <div class="bg-video">
-                    <video autoplay class="bg-video__content" autoplay muted loop>
+                    <video autoplay class="bg-video__content" muted loop>
                         <source src="img/iso-republic-free-video-003.mp4">
                         sorry! it appear your browser doesn't support this video
                     </video autoplay>
@@ -24,7 +24,7 @@
                     <h2 class="header__box--subheading sub-heading">
                         welcome to my site! 
                     </h2>
-                    <p class="header__box--copy copy-normal"> scroll. and feel free to contact me.</p>
+                    <p class="header__box--copy copy-normal"> please browse + reach out!</p>
                 </div>
         </header>
 
@@ -34,20 +34,32 @@
 
         <section class="section-about">
             <div class="about__box">
-                <p class="about__box--copy">
+                <p class="about__box--copy about__box--one">
                     I began my development journey about a year ago, when I enrolled in a coding Bootcamp. Having zero experience with programming and web development before I started, the 6 months I spent at camp were difficult, but they awakened a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress.
                 </p>
-                <p class="about__box--copy">
+                <p class="about__box--copy about__box--two">
                    I respect the power of web development; mobile development in particular. The affordability of technology has generated the egalitarian phenomenon of 3 billion smartphone owners worldwide. I believe information-sharing will sustain its continuous renaissance via mobile development, creating a better informed and increasingly empathetic global population. I couldn't imagine a better place to be.       
                 </p>
             </div>
         </section>
 
         <footer class="footer">
-            Footer
+            <div class="footer__box">
+                <ul class="navigation">
+                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="mail-outline"></ion-icon>email</a></li>
+                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="logo-github"></ion-icon>github</a></li>
+                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
+                </ul>
+                <div class="footer__box--copy">
+                    <h3 class="copy-normal">
+                        Sanjeev Chadeesingh 2020<sup>&copy;</sup>   
+                    </h3>
+                </div>
+            </div>
         </footer>
 
     </div>
 
+<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>    
 </body>
 </html>
