navigation completed, transitions added to links, animations edited

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="footer__box">
                 <ul class="navigation">
                     <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="mail-outline"></ion-icon>email</a></li>
-                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="logo-github"></ion-icon>github</a></li>
-                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
+                    <li class="navigation__link"><a href="https://github.com/Sanjeev-Chadeesingh" class="navigation__link--item"><ion-icon name="logo-github"></ion-icon>github</a></li>
+                    <li class="navigation__link"><a href="https://www.linkedin.com/in/schadeesingh/" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
                 </ul>
                 <div class="footer__box--copy">
                     <h3 class="copy-normal">
