about me section finished

--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
 
         <section class="section-about">
             <div class="about__box">
-                <p class="about__box--copy about__box--one">
-                    I began my development journey about a year ago, when I enrolled in a coding Bootcamp. Having zero experience with programming and web development before I started, the 6 months I spent at camp were difficult, but they awakened a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress.
-                </p>
-                <p class="about__box--copy about__box--two">
-                   I respect the power of web development; mobile development in particular. The affordability of technology has generated the egalitarian phenomenon of 3 billion smartphone owners worldwide. I believe information-sharing will sustain its continuous renaissance via mobile development, creating a better informed and increasingly empathetic global population. I couldn't imagine a better place to be.       
-                </p>
+                <p class="about__box--copy">
+                    I began my development journey about a year ago, when I enrolled in a coding Bootcamp. Zero previous experience with web development led to a difficult 6 months at camp, but also a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress. I believe the prospects of mobile-development are very encouraging. The affordability of technology has generated a global, egalitarian phenomenon--there are 3 billion smartphone owners worldwide. Information-sharing should sustain its continuous renaissance via mobile applications, creating a better informed, tighter connected, and increasingly empathetic global population. Markets will continue to greatly benefit from mobile development's growth potentials, at both enterprise and personal/social levels. I couldn't imagine a better place to be.
+                </p>       
             </div>
         </section>
 
