autoplay class added within element for bg video, hoping for it to play on ios safari

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Freckle+Face&family=Lacquer&family=Nosifer&family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>sanjeev chadeesingh</title>
@@ -13,14 +14,12 @@
 
         <header class="header">
                 <div class="bg-video">
-                    <video autoplay class="bg-video__content" muted loop>
+                    <video autoplay class="bg-video__content" autoplay muted loop>
                         <source src="img/iso-republic-free-video-003.mp4">
                         sorry! it appear your browser doesn't support this video
                     </video autoplay>
                 </div>
                 <div class="header__box">
-                    <!-- <h1 class="header__box--heading main-heading">mySite
-                    </h1> -->
                     <h2 class="header__box--subheading sub-heading">
                         welcome to my site! 
                     </h2>
