--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     </video autoplay>
                 </div>
                 <div class="header__box">
-                    <h2 class="header__box--subheading sub-heading">
-                        welcome to my site! 
+                    <h2 class="header__box--subheading sub-heading animate__animated animate__bounce">
+                        welcome to my site 
                     </h2>
-                    <p class="header__box--copy copy-normal"> please browse + reach out!</p>
+                    <p class="header__box--copy copy-normal animate__animated animate__bounce"> please browse + reach out!</p>
                 </div>
         </header>
 
@@ -42,9 +42,9 @@
         <footer class="footer">
             <div class="footer__box">
                 <ul class="navigation">
-                    <li class="navigation__link"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="mail-outline"></ion-icon>email</a></li>
-                    <li class="navigation__link"><a href="https://github.com/Sanjeev-Chadeesingh" class="navigation__link--item"><ion-icon name="logo-github"></ion-icon>github</a></li>
-                    <li class="navigation__link"><a href="https://www.linkedin.com/in/schadeesingh/" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
+                    <li class="navigation__link navigation__link--one"><a href="mailto:sanjeev.chadeesingh@gmail.com" class="navigation__link--item"><ion-icon name="mail-outline"></ion-icon>email</a></li>
+                    <li class="navigation__link navigation__link--two"><a href="https://github.com/Sanjeev-Chadeesingh" class="navigation__link--item"><ion-icon name="logo-github"></ion-icon>github</a></li>
+                    <li class="navigation__link navigation__link--three"><a href="https://www.linkedin.com/in/schadeesingh/" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
                 </ul>
                 <div class="footer__box--copy">
                     <h3 class="copy-normal">
