--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Freckle+Face&family=Lacquer&family=Nosifer&family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>sanjeev chadeesingh</title>
@@ -20,7 +19,7 @@
                     </video autoplay>
                 </div>
                 <div class="header__box">
-                    <h2 class="header__box--subheading sub-heading animate__animated animate__bounce">
+                    <h2 class="header__box--subheading sub-heading">
                         welcome to my site 
                     </h2>
                     <p class="header__box--copy copy-normal animate__animated animate__bounce"> please browse + reach out!</p>
@@ -33,8 +32,14 @@
 
         <section class="section-about">
             <div class="about__box">
-                <p class="about__box--copy">
-                    I began my development journey about a year ago, when I enrolled in a coding Bootcamp. Zero previous experience with web development led to a difficult 6 months at camp, but also a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress. I believe the prospects of mobile-development are very encouraging. The affordability of technology has generated a global, egalitarian phenomenon--there are 3 billion smartphone owners worldwide. Information-sharing should sustain its continuous renaissance via mobile applications, creating a better informed, tighter connected, and increasingly empathetic global population. Markets will continue to greatly benefit from mobile development's growth potentials, at both enterprise and personal/social levels. I couldn't imagine a better place to be.
+                <p class="about__box--copy about__box--copy-1">
+                    I spent my adult life in the retail sector at the microbusiness (less than 10 employees) level. One of the few equalizers to larger, corporate outfits -which had larger buying power, leading to greater sway with vendors on terms and pricing- was the application of online sales. Watching the impact of online sales unfold in real time was highly informative. Unfortunately, our business closed, which led me to look for a new career.  
+                </p>
+                <p class="about__box--copy about__box--copy-2">
+                    My web development journey began about a year ago, after my company closed its doors. I enrolled in a coding Bootcamp. Zero previous experience with web development led to a difficult 6 months at camp, but also a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress.
+                </p>
+                <p class="about__box--copy about__box--copy-3">
+                    I believe the prospects of mobile-development are very encouraging. The affordability of technology has generated a global, egalitarian phenomenon--there are 3 billion smartphone owners worldwide. Information-sharing should sustain its continuous renaissance via mobile applications, creating a better informed, tighter connected, and increasingly empathetic global population. Markets will continue to greatly benefit from mobile development's growth potentials, at both enterprise and personal/social levels. I couldn't imagine a better place to be.
                 </p>       
             </div>
         </section>
