project section card skeleton completed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
         </header>
 
         <section class="section-projects">
-            Projects
+            <div class="project__box">
+                <div class="project-card">
+                    <div class="project-card__image">
+                        
+                    </div>
+                    <div class="project-card__copyBox">
+                        <div class="project-card__copyBox--heading">
+
+                        </div>
+                        <div class="project-card__copyBox--description">
+
+                        </div>
+                        <div class="project-card__copyBox--links">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section-about">
