projects completed, desktop site finished, limited media queries for mobile response and build script left

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </video autoplay>
                 </div>
                 <div class="header__box">
-                    <h2 class="header__box--subheading sub-heading">
+                    <h2 class="header__box--subheading main-heading">
                         welcome to my site 
                     </h2>
                     <p class="header__box--copy copy-normal animate__animated animate__bounce"> please browse + reach out!</p>
@@ -27,24 +27,109 @@
         </header>
 
         <section class="section-projects">
+
             <div class="project__box">
+                <h1 class="project__box--heading">
+                    My Projects...
+                </h1>
+                <h2 class="project__box--subheading">
+                    ...these are updated as often as possible!
+                </h2>
+            </div>
+
+            <div class="card__box">
+
                 <div class="project-card">
-                    <div class="project-card__image">
-                        
-                    </div>
-                    <div class="project-card__copyBox">
-                        <div class="project-card__copyBox--heading">
-
-                        </div>
-                        <div class="project-card__copyBox--description">
-
-                        </div>
-                        <div class="project-card__copyBox--links">
-
-                        </div>
+                    <img src="/img/liri-bot2.jpeg" alt="robot image" class="project-card__image">
+                    <div class="project-card__info">
+                    <h3 class="project-card__info--title">
+                        Liri Bot
+                    </h3>
+                    <p class="project-card__info--copy">
+                        Liri Bot is a node powered, command line bot that fetches music information from several API's.
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--site">jump to site</a>
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--github">jump to code</a> 
+                    </p>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <img src="/img/oranges-1.jpeg" alt="robot image" class="project-card__image">
+                    <div class="project-card__info">
+                    <h3 class="project-card__info--title">
+                        Schneider Brothers
+                    </h3>
+                    <p class="project-card__info--copy">
+                        A website for an organic farm based in central Florida. Showcases events onsite and farming practices.
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://sanjeev-chadeesingh.github.io/SchneiderBros/" class="project-card__info--site">jump to site</a>
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/SchneiderBros" class="project-card__info--github">jump to code</a> 
+                    </p>
+                </div>
+                </div>
+
+            <div class="project-card">
+                <img src="/img/printShop.jpg" alt="robot image" class="project-card__image">
+                <div class="project-card__info">
+                    <h3 class="project-card__info--title">
+                        Print-Shop
+                    </h3>
+                    <p class="project-card__info--copy">
+                        A fictional storefront made to exhibit CSS Flexbox's power with mobile responsiveness.
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://sanjeev-chadeesingh.github.io/print-shop/" class="project-card__info--site">jump to site</a>
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/print-shop" class="project-card__info--github">jump to code</a> 
+                    </p>
+                </div>
             </div>
+
+            <div class="project-card">
+                <img src="/img/landLife.JPG" alt="robot image" class="project-card__image">
+                <div class="project-card__info">
+                    <h3 class="project-card__info--title">
+                        U.S. Land+Life
+                    </h3>
+                    <p class="project-card__info--copy">
+                        A website for an independent photographer, showcasing his most recent trip across the contiguous U.S.
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://sanjeev-chadeesingh.github.io/US-Land-Wildlife/index.html" class="project-card__info--site">jump to site</a>
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/US-Land-Wildlife" class="project-card__info--github">jump to code</a> 
+                    </p>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <img src="/img/ucfArena2.jpeg" alt="robot image" class="project-card__image">
+                <div class="project-card__info">
+                    <h3 class="project-card__info--title">
+                        Fight Page
+                    </h3>
+                    <p class="project-card__info--copy">
+                        A Bootstrap powered data-site listing the current champions in the mixed martial arts organization called the UFC.
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://sanjeev-chadeesingh.github.io/FightPage/" class="project-card__info--site">jump to site</a>
+                    </p>
+                    <p class="project-card__info--copyLink">
+                        <a href="https://github.com/Sanjeev-Chadeesingh/FightPage" class="project-card__info--github">jump to code</a> 
+                    </p>
+                </div>
+            </div>
+
+        </div>    
         </section>
 
         <section class="section-about">
@@ -69,7 +154,7 @@
                     <li class="navigation__link navigation__link--three"><a href="https://www.linkedin.com/in/schadeesingh/" class="navigation__link--item"><ion-icon name="logo-linkedin"></ion-icon>linkedIn</a></li> 
                 </ul>
                 <div class="footer__box--copy">
-                    <h3 class="copy-normal">
+                    <h3 class="copy-normal-dark">
                         Sanjeev Chadeesingh 2020<sup>&copy;</sup>   
                     </h3>
                 </div>
