images folder structure fixed

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="card__box">
 
                 <div class="project-card">
-                    <img src="/img/liri-bot2.jpeg" alt="robot image" class="project-card__image">
+                    <img src="img/liri-bot2.jpeg" alt="robot image" class="project-card__image">
                     <div class="project-card__info">
                     <h3 class="project-card__info--title">
                         Liri Bot
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="/img/oranges-1.jpeg" alt="robot image" class="project-card__image">
+                    <img src="img/oranges-1.jpeg" alt="robot image" class="project-card__image">
                     <div class="project-card__info">
                     <h3 class="project-card__info--title">
                         Schneider Brothers
@@ -76,7 +76,7 @@
                 </div>
 
             <div class="project-card">
-                <img src="/img/printShop.jpg" alt="robot image" class="project-card__image">
+                <img src="img/printShop.jpg" alt="robot image" class="project-card__image">
                 <div class="project-card__info">
                     <h3 class="project-card__info--title">
                         Print-Shop
@@ -94,7 +94,7 @@
             </div>
 
             <div class="project-card">
-                <img src="/img/landLife.JPG" alt="robot image" class="project-card__image">
+                <img src="img/landLife.JPG" alt="robot image" class="project-card__image">
                 <div class="project-card__info">
                     <h3 class="project-card__info--title">
                         U.S. Land+Life
@@ -112,7 +112,7 @@
             </div>
 
             <div class="project-card">
-                <img src="/img/ucfArena2.jpeg" alt="robot image" class="project-card__image">
+                <img src="img/ucfArena2.jpeg" alt="robot image" class="project-card__image">
                 <div class="project-card__info">
                     <h3 class="project-card__info--title">
                         Fight Page
