hoping for folder structure to work, about section copy increased padding for readability

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <section class="section-about">
             <div class="about__box">
                 <p class="about__box--copy about__box--copy-1">
-                    I spent my adult life in the retail sector at the microbusiness (less than 10 employees) level. One of the few equalizers to larger, corporate outfits -which had larger buying power, leading to greater sway with vendors on terms and pricing- was the application of online sales. Watching the impact of online sales unfold in real time was highly informative. Unfortunately, our business closed, which led me to look for a new career.  
+                    I spent my adult life in the retail sector at the microbusiness (less than 10 employees) level. One of the few equalizers to larger, corporate outfits was the application of online sales. Watching the impact of online sales unfold in real time was highly informative. Unfortunately, outside circumstances caused the business to close, which led me to look for a new career.  
                 </p>
                 <p class="about__box--copy about__box--copy-2">
                     My web development journey began about a year ago, after my company closed its doors. I enrolled in a coding Bootcamp. Zero previous experience with web development led to a difficult 6 months at camp, but also a curiosity I now welcome and cultivate daily. I've learned that moments of confusion are in fact parts of the journey, and moreso, markers of progress.
