Editing and fixing

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                 </div>
                 <div class="header__box">
                     <h2 class="header__box--subheading main-heading">
-                        welcome to my site 
+                        Welcome 
                     </h2>
-                    <p class="header__box--copy copy-normal animate__animated animate__bounce"> please browse + reach out!</p>
                 </div>
         </header>
 
@@ -30,7 +29,7 @@
 
             <div class="project__box">
                 <h1 class="project__box--heading">
-                    My Projects...
+                    Thanks for visiting!  my Projects:
                 </h1>
                 <h2 class="project__box--subheading">
                     ...these are updated as often as possible!
@@ -49,10 +48,10 @@
                         Liri Bot is a node powered, command line bot that fetches music information from several API's.
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--site">jump to site</a>
+                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--site">link to live site</a>
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--github">jump to code</a> 
+                        <a href="https://github.com/Sanjeev-Chadeesingh/liri-node-app" class="project-card__info--github">link to code repository</a> 
                     </p>
                     </div>
                 </div>
@@ -67,10 +66,10 @@
                         A website for an organic farm based in central Florida. Showcases events onsite and farming practices.
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://sanjeev-chadeesingh.github.io/SchneiderBros/" class="project-card__info--site">jump to site</a>
+                        <a href="https://sanjeev-chadeesingh.github.io/SchneiderBros/" class="project-card__info--site">link to live site</a>
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/SchneiderBros" class="project-card__info--github">jump to code</a> 
+                        <a href="https://github.com/Sanjeev-Chadeesingh/SchneiderBros" class="project-card__info--github">link to code repository</a> 
                     </p>
                 </div>
                 </div>
@@ -82,13 +81,13 @@
                         Print-Shop
                     </h3>
                     <p class="project-card__info--copy">
-                        A fictional storefront made to exhibit CSS Flexbox's power with mobile responsiveness.
+                        A fictional storefront made to exhibit CSS Flexbox's power and adaptability with mobile responsiveness.
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://sanjeev-chadeesingh.github.io/print-shop/" class="project-card__info--site">jump to site</a>
+                        <a href="https://sanjeev-chadeesingh.github.io/print-shop/" class="project-card__info--site">link to live site</a>
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/print-shop" class="project-card__info--github">jump to code</a> 
+                        <a href="https://github.com/Sanjeev-Chadeesingh/print-shop" class="project-card__info--github">link to code repository</a> 
                     </p>
                 </div>
             </div>
@@ -103,10 +102,10 @@
                         A website for an independent photographer, showcasing his most recent trip across the contiguous U.S.
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://sanjeev-chadeesingh.github.io/US-Land-Wildlife/index.html" class="project-card__info--site">jump to site</a>
+                        <a href="https://sanjeev-chadeesingh.github.io/US-Land-Wildlife/index.html" class="project-card__info--site">link to live site</a>
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/US-Land-Wildlife" class="project-card__info--github">jump to code</a> 
+                        <a href="https://github.com/Sanjeev-Chadeesingh/US-Land-Wildlife" class="project-card__info--github">link to code repository</a> 
                     </p>
                 </div>
             </div>
@@ -121,10 +120,10 @@
                         A Bootstrap powered data-site listing the current champions in the mixed martial arts organization called the UFC.
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://sanjeev-chadeesingh.github.io/FightPage/" class="project-card__info--site">jump to site</a>
+                        <a href="https://sanjeev-chadeesingh.github.io/FightPage/" class="project-card__info--site">link to live site</a>
                     </p>
                     <p class="project-card__info--copyLink">
-                        <a href="https://github.com/Sanjeev-Chadeesingh/FightPage" class="project-card__info--github">jump to code</a> 
+                        <a href="https://github.com/Sanjeev-Chadeesingh/FightPage" class="project-card__info--github">link to code repository</a> 
                     </p>
                 </div>
             </div>
