--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 
             <div class="project__box">
                 <h1 class="project__box--heading">
-                    Thanks for visiting!  my Projects:
+                    Thanks for visiting!
+                </h1>
+                <h1 class="project__box--heading">
+                    my Projects..
                 </h1>
                 <h2 class="project__box--subheading">
-                    ...these are updated as often as possible!
+                    ..updated as often as possible!
                 </h2>
             </div>
 
